# search-ads-cli

./: Cargo.toml  README.md
.dots/: config  search-ads-cli-52090f2770b500a0.md  search-ads-cli-857f8748282d9970.md
.dots/archive/: search-ads-cli-52090f2770b500a0.md  search-ads-cli-857f8748282d9970.md
.github/workflows/: release.yml
schemas/: googleads.desc
scripts/: install.sh
src/: auth.rs  client.rs  command_tree.rs  gaql.rs  json_input.rs  main.rs  mutate.rs  proto_json.rs
tools/: build_descriptor.sh  fetch_protos.py
