[package]
name = "search-ads"
version = "0.1.1"
edition = "2024"

[dependencies]
anyhow = "1.0.95"
bytes = "1.10.0"
clap = { version = "4.5.27", features = ["string"] }
env_logger = "0.11.6"
log = "0.4.22"
prost = "0.13.3"
prost-reflect = { version = "0.14.0", features = ["serde"] }
reqwest = { version = "0.12.12", default-features = false, features = ["json", "rustls-tls"] }
serde = { version = "1.0.216", features = ["derive"] }
serde_json = "1.0.133"
tokio = { version = "1.43.0", features = ["rt-multi-thread", "macros"] }
tonic = { version = "0.12.3", features = ["tls", "tls-webpki-roots"] }
